2008-03-02  Noel O'Boyle <baoilleach@gmail.com>
	
	* configure.in: Fix bug...should have been $have_boost not $HAVE_BOOST

2008-03-02  Noel O'Boyle <baoilleach@gmail.com>
	
	* configure.in: Only use BOOST for shared_pointer if the GCC4.x
	implementation is not available.

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl: Add dependency checking for libopenbabel. This
	prevents people trying to run automated CPAN tests without the
	library.

2008-03-01  Noel O'Boyle <baoilleach@gmail.com>
	
	* acinclude.m4: Set "have_boost" to "yes" so I can test it in
	configure.in
	* configure.in: Set Automake variable HAVE_SHARED_POINTER if the user
	has either of Boost or tr1/memory (gcc4.x)
	If "have_boost" is "yes" then set both the Automake variable
	USE_BOOST_FLAGS and the C++ #define USE_BOOST
	* src/formats/Makefile.am: Set the compile flags for BOOST if necessary
	Only compile chemkinformat, rxnformat and chemdrawcdxformat if
	HAVE_SHARED_POINTER is true

2008-02-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/generic.h (OBVectorData): New class for storing vector3
	(e.g., dipole moment, transition dipole, etc.)

2008-02-29  Chris Morley

	* src/obconversion.cpp:mods to OBConversion destructor to prevent
	input or output stream being deleted twice when there is an
	associated XMLConversion object - with CML. Possibly closer to
	fixing bugs #1815533 and #1900480.
	
	Add OBMCDL for Windows OBF build.

2008-02-29  Noel O'Boyle <baoilleach@gmail.com>

	* acinclude.m4: Just say 'not found' if BOOST not found.
	
	* configure.in: Look for BOOST and look for tr1/memory.

2008-02-29  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Bugfix for "[ 1904345 ] Angle, Pair,
	Torsion iterators dones not have deref() method". Turns out that I
	could have been using the __ref__() method all along. This doesn't
	seem to be in the SWIG documentation though.

2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>
